--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,8 @@
 
 <body>
     <div class="container">
-        <h1>Parcial implementacion NodeJs y EJS</h1>
+        <div class="card">
+                    <h1>Parcial implementacion NodeJs y EJS</h1>
         <div class="form-group">
             <label for="filtroTitulo">Buscar películas por título:</label>
             <input type="text" class="form-control" id="filtroTitulo" name="filtroTitulo" onkeyup="filtrarPeliculas()"
@@ -35,66 +36,70 @@
             <button class="btn btn-secondary" onclick="limpiarFiltro()">Limpiar filtro</button>
         </div>
 
-        <div class="card">
+        <div class="container">
             <% if (peliculas.size> 0) { %>
 
-
-                <div class="table-responsive-xl">
-                    <table class="table table-striped">
-                        <thead>
-                            <tr>
-                                
-                                <th>ID</th>
-                                <th>title</th>
-                                <th>phase</th>
-                                <th>category_name</th>
-                                <th>release_year</th>
-                                <th>running_time</th>
-                                <th>rating_name</th>
-                                <th>disc_format_name</th>
-                                <th>number_discs</th>
-                                <th>viewing_format_name</th>
-                                <th>aspect_ratio_name</th>
-                                <th>status</th>
-                                <th>release_date</th>
-                                <th>budget</th>
-                                <th>gross</th>
-                                <th>time_stamp</th>
-                                <th>Eliminar</th>
-                            </tr>
-                        </thead>
-                        <tbody id="tablaPeliculas">
-                            <% peliculas.forEach((v,k)=> { %>
-                                <tr><td><%= v.movie_id %></td>
-                                    <td><%= v.title %></td>
-                                    <td><%= v.phase %></td>
-                                    <td><%= v.category_name %></td>
-                                    <td><%= v.release_year %></td>
-                                    <td><%= v.running_time %></td>
-                                    <td><%= v.rating_name %></td>
-                                    <td><%= v.disc_format_name %></td>
-                                    <td><%= v.number_discs %></td>
-                                    <td><%= v.viewing_format_name %></td>
-                                    <td><%= v.aspect_ratio_name %></td>
-                                    <td><%= v.status %></td>
-                                    <td><%= v.release_date %></td>
-                                    <td><%= v.budget %></td>
-                                    <td><%= v.gross %></td>
-                                    <td><%= v.time_stamp %></td>
-                                    <td><a class="btn btn-danger" href="/delete/<%=v.movie_id  %>">Eliminar</a></td>
+                <div class="col-sm-4">
+                    <div class="table-responsive-sm">
+                        <table class="table bm-2">
+                            <thead>
+                                <tr>
+                                    
+                                    <th>ID</th>
+                                    <th>title</th>
+                                    <th>phase</th>
+                                    <th>category_name</th>
+                                    <th>release_year</th>
+                                    <th>running_time</th>
+                                    <th>rating_name</th>
+                                    <th>disc_format_name</th>
+                                    <th>number_discs</th>
+                                    <th>viewing_format_name</th>
+                                    <th>aspect_ratio_name</th>
+                                    <th>status</th>
+                                    <th>release_date</th>
+                                    <th>budget</th>
+                                    <th>gross</th>
+                                    <th>time_stamp</th>
+                                    <th>Eliminar</th>
                                 </tr>
-                                <%})%>
-                        </tbody>
-
-                    </table>
-
+                            </thead>
+                            <tbody id="tablaPeliculas">
+                                <% peliculas.forEach((v,k)=> { %>
+                                    <tr><td><%= v.movie_id %></td>
+                                        <td><%= v.title %></td>
+                                        <td><%= v.phase %></td>
+                                        <td><%= v.category_name %></td>
+                                        <td><%= v.release_year %></td>
+                                        <td><%= v.running_time %></td>
+                                        <td><%= v.rating_name %></td>
+                                        <td><%= v.disc_format_name %></td>
+                                        <td><%= v.number_discs %></td>
+                                        <td><%= v.viewing_format_name %></td>
+                                        <td><%= v.aspect_ratio_name %></td>
+                                        <td><%= v.status %></td>
+                                        <td><%= v.release_date %></td>
+                                        <td><%= v.budget %></td>
+                                        <td><%= v.gross %></td>
+                                        <td><%= v.time_stamp %></td>
+                                        <td><a class="btn btn-danger" href="/delete/<%=v.movie_id  %>">Eliminar</a></td>
+                                    </tr>
+                                    <%})%>
+                            </tbody>
+    
+                        </table>
+    
+                    </div>
                 </div>
+
 
 
                 <% } else {%>
                     <h1> No hay datos </h1>
                     <% } %>
         </div>
+        </div>
+
 
     </div>
 
